packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-02/runner/src/index.js
import React from 'react';
import ReactDOM from 'react-dom';
import Dashboard from './Dashboard';

ReactDOM.render(
  <React.StrictMode>
    <Dashboard />
  </React.StrictMode>,
  document.getElementById('root')
);
